Fixed: wflow-consoleweb - Performance Analyzer - Top status stats hidden by userview theme header @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/admin_bar.css
+++ b/wflow-consoleweb/src/main/webapp/css/admin_bar.css
@@ -246,7 +246,7 @@ body.embeded #adminBar {
     top: 0px;
     padding: 2px; 
     position: absolute; 
-    z-index: 100; 
+    z-index: 500; 
     border: solid 1px orange; 
     background: lightgoldenrodyellow; 
 }
